--- a/Portfolio/views/home.ejs
+++ b/Portfolio/views/home.ejs
@@ -14,7 +14,7 @@
                     </label>
                     <nav class="menu float-right">
                         <a href="#">Projects</a>
-                        <a  target="h_blank" href="https://github.com/BaderHAB/Projects">GitHub</a>
+                        <a  target="h_blank" href="https://github.com/BaderHAB/Badrdine">GitHub</a>
                         <a href="mailto:brdine23@gmail.com">Contact me</a>
                         <label for="check" class="esconder-menu">
                             &#215
