--- a/Portfolio/views/home.ejs
+++ b/Portfolio/views/home.ejs
@@ -15,7 +15,7 @@
                     <nav class="menu float-right">
                         <a href="#">Projects</a>
                         <a  target="h_blank" href="https://github.com/BaderHAB/Badrdine">GitHub</a>
-                        <a href="mailto:brdine23@gmail.com">Contact me</a>
+                        <a href="/contact">Contact me</a>
                         <label for="check" class="esconder-menu">
                             &#215
                         </label>
@@ -43,21 +43,28 @@
                 <h2>MY RECENT PROJECTS</h2>
             </div>
             <div id="projects" class="row">
-                <div class="col">
-                    <div class="whiteblock">
-
-                    </div>
-                    
+                <div class="col ">
+                    <div class="whiteblock text-center">
+                        <h3>E-commerce web</h3>
+                        <div class="col">
+                            <a href=""><img src="" alt="E-commerce"></a>
+                        </div>   
+                    </div>        
                 </div>
                 <div class="col">
-                    <div class="whiteblock">
-
+                    <div class="whiteblock text-center">
+                        <h3>Disease diagnosis web</h3>
+                        <div class="col">
+                            <a href=""><img src="" alt="atencionPrimaria"></a>
+                        </div>
                     </div>
-                    
                 </div>
                 <div class="col">
-                    <div class="whiteblock">
-
+                    <div class="whiteblock text-center">
+                        <h3>Google type web</h3>
+                        <div class="col">
+                            <a href=""><img src="" alt="googleWeb"></a>
+                        </div>
                     </div>
                     
                 </div>
