--- a/Portfolio/views/partials/head.ejs
+++ b/Portfolio/views/partials/head.ejs
@@ -2,9 +2,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My site</title>
+    <title>Badrdine Hammani</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./fonts/logo2.png">
 </head>
