--- a/Portfolio/public/style.css
+++ b/Portfolio/public/style.css
@@ -49,6 +49,7 @@ html ,body{height: 100%;}
    clear: left;
    justify-content: center;
    align-items: center;
+   text-shadow: 0px 0px 30px white;
 }
 #info{
    flex-direction: column;
@@ -71,6 +72,7 @@ html ,body{height: 100%;}
    background-color: white;
    width: auto;
    height: 70vh;
+   box-shadow: 0px 0px 20px grey;
 }
 
 
