--- a/Portfolio/views/contactme.ejs
+++ b/Portfolio/views/contactme.ejs
@@ -21,27 +21,33 @@
       </div>
     </header>
     <section>
-        <div id="containerForm" class="container-fluid">
-            <div id="boxForm"class="row">
-                <form action="">
-                    <div class="col">
-                    <label for="">Name</label>
-                    <input type="text" name="user" id="">
-                    <label for="">Mail</label>
-                    <input type="text" name="user" id="">
-                    <br>
-                    </div>
-                    <div class="col">
-                    <label for="">Message</label>
-                    <br>
-                    <textarea name="message"  cols="60" rows="8"></textarea>
-                    </div>
-                    <button type="button" class="btn btn-outline">Send!</button>
-                </form>
-                
-
+       <div id="formCont" class="container-fluid">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-8 text-center">
+                    <h2>Thanks for visiting! How can I help you?</h2>
+                </div>
+                <div class="w-100"></div>
+                <div class="form-group col-4 text-left">
+                    <form action="">
+                            <label for="textI1">Full Name</label>
+                            <input type="text" class="form-control" name="name" id="textI1">              
+                </div>
+                <div class="form-group col-4 text-left">
+                    <form action="">                       
+                            <label for="textI2">Email</label>
+                            <input type="text" class="form-control" name="email" id="textI2">                      
+                </div>
+                <div class="w-100"></div>
+                <div class="col-8 align-self-center">
+                        <div class="form-group  ">
+                            <label for="textarea1">Message</label>
+                            <textarea class="form-control form-control-lg " id="textarea1" name="message"  rows="2"></textarea>                       
+                        </div>
+                        <button  id="submitB"type="submit" class="btn btn-outline float-right">Send</button>
+                    </form>
+                </div>
+                </div>
             </div>
-
         </div>
     </section>
 </body>
