--- a/Ecommerce/views/home.ejs
+++ b/Ecommerce/views/home.ejs
@@ -13,37 +13,15 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div id="head" class="row">
-                <div class="col-sm-6"><a href="/"><h1>E-commerce</h1></div></a>
-               <div class="col-sm-6"> <a href="/login"><button class="btn btn-outline-info" >Bienvenido, Inicia Sesion</button></a></div>
+            <div id="head" class="row align-items-center justify-content-between">
+                <div class="col-3 text-center"><a href="/"><h1>E-commerce</h1></a></div>
+               <div class="col-6 text-right"> <a href="/login"><button class="btn btn-outline-info" >Bienvenido, Inicia Sesion</button></a></div>
+               <div class="w-100"></div>
+               
             </div>
         </div>
     </header>
-    <div class="container-fluid">
-        <div id="weeklyInfo" class="row">
-            <h3>DISFRUTA AHORA DE LAS OFERTA DEL BLACK FRIDAY, SOLO HASTA EL 25 DE NOVIEMBRE!</h3>
-        </div>
-    </div>
-    <section>
-        <div class="container-fluid">
-            <div id="ofertas"class="row">
-                <div class="col-sm-4">
-                </div>
-                <div class="col-sm-4">
-                </div>
-                <div class="col-sm-4">
-                </div>
 
-        </div>
-    </section>
-    <footer>
-        <div class="container-fluid">
-            <div id="foot" class="row">
-                
-
-            </div>
-        </div>
-    </footer>
     
     
 </body>
