--- a/Portfolio/views/home.ejs
+++ b/Portfolio/views/home.ejs
@@ -47,7 +47,7 @@
                     <div class="whiteblock text-center">
                         <h3>E-commerce web</h3>
                         <div class="col">
-                            <a href=""><img src="" alt="E-commerce"></a>
+                            <a href="https://shop2you.vercel.app/"><img src="" alt="E-commerce"></a>
                         </div>   
                     </div>        
                 </div>
