--- a/Ecommerce/views/login.ejs
+++ b/Ecommerce/views/login.ejs
@@ -14,34 +14,18 @@
     <header>
     <div class="container-fluid">
         <div id="head" class="row">
-            <div class="col-sm-3"><a href="/"><h1>E-commerce</h1></div></a>
+            <div class="col-sm-3"><h1><a href="/">E-commerce</a></h1></div>
         </div>
     </div>
     </header>
     <section>
-    <div class="container-fluid">
-        <div  id="Box" class="row text-center">
-            <h2>Iniciar Sesión</h2>
-            <div  class="col-sm-6">
-                <form action="" id="iniciarS">
-                    <label for="usuario">Introduce tu usuario</label>
-                    <input type="text" placeholder="usuario">
-                    <label for="contraseña">Introduce tu contraseña</label>
-                    <input type="password" placeholder="contraseña">
-                    <button class="btn btn-outline-info">Entrar</button>
-                </form>
-            </div>
-            <a href="/register">¿No tienes cuenta?, Registrate aquí</a>
-        </div>
-    </div>
-    </section>
-    <footer>
         <div class="container-fluid">
-            <div id="foot" class="row">
-                
-
+            <div class="row">
+                <div class="col-6"> </div>
+                <div class="col-8"></div>
+                <div class="col-6"></div>
             </div>
         </div>
-    </footer>
+    </section>
 </body>
 </html>
