--- a/Portfolio/views/home.ejs
+++ b/Portfolio/views/home.ejs
@@ -45,9 +45,11 @@
             <div id="projects" class="row">
                 <div class="col ">
                     <div class="whiteblock text-center">
-                        <h3>E-commerce web</h3>
+                        <h3>Shop2You web</h3>
                         <div class="col">
-                            <a href="https://shop2you.vercel.app/"><img src="" alt="E-commerce"></a>
+                            <a href="https://shop2you.vercel.app/"><img width="420"src="/fonts/ecommerce.png" alt="E-commerce"></a>
+                            <hr>
+                            <h4>A e-commerce type web that allows users to create their own stores and anunce its products.</h4></li>
                         </div>   
                     </div>        
                 </div>
