--- a/Portfolio/views/home.ejs
+++ b/Portfolio/views/home.ejs
@@ -47,7 +47,7 @@
                     <div class="whiteblock text-center">
                         <h3>Shop2You web</h3>
                         <div class="col">
-                            <a href="https://shop2you.vercel.app/"><img width="420"src="/fonts/ecommerce.png" alt="E-commerce"></a>
+                            <a href="https://shop2you.vercel.app/"><img width="90%"src="/fonts/ecommerce.png" alt="E-commerce"></a>
                             <hr>
                             <h4>A e-commerce type web that allows users to create their own stores and anunce its products.</h4></li>
                         </div>   
