--- a/Portfolio/views/home.ejs
+++ b/Portfolio/views/home.ejs
@@ -49,7 +49,7 @@
                         <div class="col">
                             <a href="https://shop2you.vercel.app/"><img width="90%"src="/fonts/ecommerce.png" alt="E-commerce"></a>
                             <hr>
-                            <h4>A e-commerce type web that allows users to create their own stores and anunce its products.</h4></li>
+                            <h4>A e-commerce type web that allows users to create their own stores and anounce its products.</h4></li>
                         </div>   
                     </div>        
                 </div>
