--- a/Ecommerce/views/login/login.ejs
+++ b/Ecommerce/views/login/login.ejs
@@ -6,22 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/loginstyles.css">
+    <link rel="stylesheet" href="/css/register.css">
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="/login" method="POST">
-        <div>
-        <label for="username">Username: </label>
-        <input type="text" name="username" id="username" placeholder="username">
+    <div class="fullbody">
+        <div class="box container-fluid">
+            <div class="regForm row">
+                <form action="/register" method="POST">
+                <div class="title col">
+                        <h2>Log in your account</h2>
+                        <div style="height: 2px; background-color: #EAEFF5"></div>
+                </div>
+                <div class="col form-group">
+                    <label for="username">Username: </label>
+                    <input type="text" name="username" id="username" placeholder="username" class="form-control" required>
+                </div>
+                <div class="col form-group">
+                    <label for="passwrod">Password: </label>
+                    <input type="password" name="password" id="password" placeholder="password" class="form-control" required>
+                </div>
+                <div class="col">
+                    <a href="/register">Not registered? Create an account!</a>
+                </div>
+                <div class="col">
+                    <button class="btn btn-outline-dark float-right">Log in</button>
+                </div>
+                </form>
+            </div>
         </div>
-        <div>
-        <label for="password">Passsword: </label>
-        <input type="password" name="password" id="password" placeholder="password">
-        </div>
-        <button>Login</button>
-    </form>
+    </div>
 </body>
 </html>
