--- a/Ecommerce/views/login/login.ejs
+++ b/Ecommerce/views/login/login.ejs
@@ -16,7 +16,7 @@
             <div class="regForm row">
                 <form action="/register" method="POST">
                 <div class="title col">
-                        <h2>Log in your account</h2>
+                        <h2>Log in to your account</h2>
                         <div style="height: 2px; background-color: #EAEFF5"></div>
                 </div>
                 <div class="col form-group">
