--- a/Ecommerce/views/register/register.ejs
+++ b/Ecommerce/views/register/register.ejs
@@ -33,7 +33,7 @@
                     <input type="password" name="password" id="password" placeholder="password" class="form-control" required>
                 </div>
                 <div class="col">
-                    <a href="/login">Already registered? Log In!</a>
+                    <a href="/login">Already registered? Login!</a>
                 </div>
                 <div class="col">
                     <button class="btn btn-outline-dark float-right">Create account</button>
