--- a/Ecommerce/views/login/login.ejs
+++ b/Ecommerce/views/login/login.ejs
@@ -14,7 +14,7 @@
     <div class="fullbody">
         <div class="box container-fluid">
             <div class="regForm row">
-                <form action="/register" method="POST">
+                <form action="/login" method="POST">
                 <div class="title col">
                         <h2>Login to your account</h2>
                         <div style="height: 2px; background-color: #EAEFF5"></div>
@@ -27,9 +27,9 @@
                     <label for="passwrod">Password: </label>
                     <input type="password" name="password" id="password" placeholder="password" class="form-control" required>
                 </div>
-                <div class="col">
+               <!--  <div class="col">
                     <a href="/register">Not registered? Create an account!</a>
-                </div>
+                </div> -->
                 <div class="col">
                     <button class="btn btn-outline-dark float-right">Login</button>
                 </div>
