--- a/Ecommerce/views/login/login.ejs
+++ b/Ecommerce/views/login/login.ejs
@@ -27,9 +27,9 @@
                     <label for="passwrod">Password: </label>
                     <input type="password" name="password" id="password" placeholder="password" class="form-control" required>
                 </div>
-               <!--  <div class="col">
+                <div class="col">
                     <a href="/register">Not registered? Create an account!</a>
-                </div> -->
+                </div> 
                 <div class="col">
                     <button class="btn btn-outline-dark float-right">Login</button>
                 </div>
