--- a/Ecommerce/public/css/newS.css
+++ b/Ecommerce/public/css/newS.css
@@ -11,7 +11,7 @@ body {
 .background{
     height: 100%;
     opacity: 0.8;
-    background-image:  radial-gradient(#000000 0.5px, transparent 0.5px), radial-gradient(#000000 0.5px, #84a98c 0.5px);
+    background-image:  radial-gradient(#000000 0.5px, transparent 0.5px), radial-gradient(#000000 0.5px, #8787FB 0.5px);
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
 }
