--- a/Ecommerce/public/css/register.css
+++ b/Ecommerce/public/css/register.css
@@ -8,6 +8,10 @@ body .fullbody{
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
 }
+.alert{
+    position: absolute;
+    
+}
 .box{
     display: flex;
     justify-content: center;
