--- a/Ecommerce/views/products/index.ejs
+++ b/Ecommerce/views/products/index.ejs
@@ -6,40 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Products</title>
     <link rel="stylesheet" href="StyleP.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h1>All Products</h1>
-    <section>
-        <div class="row">
-            <div class="electronic">
-                <h2>CATEGORY: ELECTRONIC   </h2>
-                <ul>
-                    <% for(let product of products){ %> 
-                        <% if(product.category==='electronic'){ %> 
-                        <li><a href="/products/<%= product._id %>"><%= product.name %></a></li>
-                    <% }} %> 
-                </ul>
-            </div>
-            <div class="house">
-                <h2>CATEGORY: HOUSE</h2>
-                <ul>
-                    <% for(let product of products){ %> 
-                        <% if(product.category==='house'){ %> 
-                        <li><a href="/products/<%= product._id %>"><%= product.name %></a></li>
-                    <% }} %> 
-                </ul>
-            </div>
-            <div class="general">
-                <h2>CATEGORY: GENERAL</h2>
-                <ul>
-                    <% for(let product of products){ %> 
-                        <% if(product.category==='general'){ %> 
-                        <li><a href="/products/<%= product._id %>"><%= product.name %></a></li>
-                    <% }} %> 
-                </ul>
-            </div>
-        </div>
-    </section>
+    <%- include('../partials/nav') %> 
+    
     <a href="/stores">Go to Stores</a>
 </body>
 </html>
