--- a/Ecommerce/views/stores/index.ejs
+++ b/Ecommerce/views/stores/index.ejs
@@ -5,19 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/stores.css">
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <title>All Stores</title>
 </head>
 <body>
-    <%- include('../partials/flash') %> 
-    <h1>All Stores</h1>
-    <ul>
-        <% for(let store of stores){ %> 
-            <li><a href="/stores/<%= store._id %>"><%= store.name %></a></li>
-        <% } %> 
-    </ul>
-    <a href="/stores/new">Create a new store</a>
-    <a href="/products">Go to All products</a>
+    <%- include('../partials/flash') %>
+    <%- include('../partials/nav') %> 
+    <div class="info container-fluid">
+        <div class="stores row">
+            <div class="col capsulas">
+              <h5 class="text-center"><strong>WEEKLY DISCOUNTED SHOPS</strong></h5>
+                <% for(let store of stores){ %> 
+                    <button class="btn btn-light"><a class="shop" href="/stores/<%= store._id %>"><%= store.name %> by <%= store.owner %> </a></button>
+                <% } %> 
+            </div>
+            <div class="col capsulas ">
+              <h5 class="text-center"><strong>MOST POPULAR SHOPS</strong></h5>
+                <% for(let store of stores){ %> 
+                    <button class="btn btn-light"><a class="shop" href="/stores/<%= store._id %>"><%= store.name %> by <%= store.owner %> </a></button>
+                <% } %> 
+            </div>
+        </div>
+    </div>
+    <div class="info container-fluid">
+        <div class="stores row">
+            <div class="col capsulas2">
+              <h5 class="text-center"><strong>XMAS SPECIALS</strong></h5>
+                <% for(let store of stores){ %> 
+                    <button class="btn btn-light"><a class="shop" href="/stores/<%= store._id %>"><%= store.name %> by <%= store.owner %> </a></button>
+                <% } %> 
+            </div>
+            <div class="col capsulas2">
+              <h5 class="text-center"><strong>FOR YOU</strong></h5>
+                <% for(let store of stores){ %> 
+                    <button class="btn btn-light"><a class="shop" href="/stores/<%= store._id %>"><%= store.name %> by <%= store.owner %> </a></button>
+                <% } %>
+            </div>
+            <div class="col capsulas2">
+                <h5 class="text-center"><strong>FLASH DISCOUNTS</strong></h5>                
+                  <% for(let store of stores){ %> 
+                    <button class="btn btn-light"><a class="shop" href="/stores/<%= store._id %>"><%= store.name %> by <%= store.owner %> </a></button>
+                  <% } %> 
+              </div>
+        </div>
+    </div>
+    <%- include('../partials/footes') %> 
 </body>
 </html>
