--- a/Ecommerce/views/partials/nav.ejs
+++ b/Ecommerce/views/partials/nav.ejs
@@ -1,17 +1,23 @@
 <header>
     <div class="container-fluid">
-        <div id="head" class="row align-items-center justify-content-between">
-            <div class="col-3 text-left"><h1><a href="/">Shop2You</a></h1></div>
-            <div class="seleccion col-2  text-center">
-                <a href="/products">DISCOVER</a>
-            </div>
-            <div class="seleccion col-2  text-center">
+        <div  class="head row align-items-center justify-content-between">
+            <div class="col text-center"><h1><a href="/">Shop2You</a></h1></div>
+            <!-- <div class="seleccion col">
+                <a href="/stores">DISCOVER</a>
+            </div> -->
+            <div class="seleccion col text-left">
                 <a href="/stores">SHOPS</a>
             </div>
-            <div class="seleccion col-2 text-center">
+            <div class="seleccion col text-left">
                 <a href="/products/categories">CATEGORIES</a>
+            </div> 
+            <div class="col-4 ">
+                <form action="/search" method="post" class="input-group">
+                    <input type="search" name="q" id="q" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon">
+                    <button class="btn btn-outline" >Search</button>
+                </form> 
             </div>
-            <div class="col-3 text-right"> 
+            <div class="col text-right"> 
                 <% if(!currentUser){ %> 
                     <a href="/login"><button class="btn btn-outline" >Welcome, Login!</button></a>
                 <% }else if(currentUser) { %> 
