--- a/Ecommerce/views/needTo/needTo.ejs
+++ b/Ecommerce/views/needTo/needTo.ejs
@@ -11,9 +11,9 @@
     <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center" style="color: #00b389;">
         <h1>You must be logged to create a store!</h1>
-        <button class="btn btn-outline-dark"><a href="/login">Go to Login</a></button>
+        <a href="/login"><button class="btn btn-outline-dark">Go to Login</button></a>
     </div>
     
 </body>
