--- a/Ecommerce/views/partials/footes.ejs
+++ b/Ecommerce/views/partials/footes.ejs
@@ -1,10 +1,9 @@
 <footer>
-    <div class="footer container-fluid">
-        <div class="about row">
-            <div class="col text-center">
-                <a href="">About Us</a></div>
-            <div class="col text-center"><a href="">Legal Terms</a></div>
-            <div class="col text-center"><a href="">Help</a></div>
+    <div class="footCont container-fluid">
+        <div class="footer row">
+            <div class="col-3"><a href="">Legal Terms</a></div>
+            <div class="col-3"><a href="">Privacy</a></div>
+            <div class="col-3"><a href="">Help</a></div>
         </div>
     </div>
 </footer>
