--- a/Ecommerce/views/users/login.ejs
+++ b/Ecommerce/views/users/login.ejs
@@ -15,9 +15,10 @@
         <div class="box container-fluid">
             <div class="regForm row">
                 <form action="/login" method="POST">
-                    <div class="col">
-                        <%- include('../partials/flash') %> 
-                    </div>
+                <div class="col text-center">
+                    <%- include('../partials/flash') %>
+                    <a href="/"><img src="/fonts/logo2.png"  style="width: 10rem;" alt=""></a> 
+                </div>    
                 <div class="title col">
                         <h2>Login to your account</h2>
                         <div style="height: 2px; background-color: #EAEFF5"></div>
