--- a/Ecommerce/public/css/register.css
+++ b/Ecommerce/public/css/register.css
@@ -4,14 +4,14 @@ body .fullbody{
     height: 100%;
     /* background-color: #84a98c; */
     opacity: 0.8;
-    background-image:  radial-gradient(#000000 0.5px, transparent 0.5px), radial-gradient(#000000 0.5px, #8787FB 0.5px);
+    background-image:  radial-gradient(#000000 0.5px, transparent 0.5px), radial-gradient(#000000 0.5px, #00b389 0.5px);
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
 }
-.alert{
+ .alert{
     position: absolute;
-    
-}
+    left: 0px;
+} 
 .box{
     display: flex;
     justify-content: center;
@@ -23,7 +23,7 @@ body .fullbody{
     align-items: center;
     justify-content: center;
     width: 60%;
-    height: 80%;
+    height: 90%;
     background-color: #fdfff5;
     opacity: 0.9;
     border-radius: 15px;
@@ -41,7 +41,7 @@ body .fullbody{
 }
 
 .regForm button:hover{
-    background-color: #8787FB;
+    background-color: #00b389;
     border: 0;
 }
 .regForm a{
@@ -49,14 +49,16 @@ body .fullbody{
 }
 
 .regForm a:hover{
-    color: #8787fb;
+    color: #00b389;
     text-decoration: none;
 }
 
-@media (max-width:425px){
+@media (max-width:426px){
     .regForm{
-        height: 88%;
-        width: 72%;
+        height: 96%;
+        width: 94%;
     }
 }
+
+
 
