--- a/Ecommerce/public/css/styles(deprecated).css
+++ b/Ecommerce/public/css/styles(deprecated).css
@@ -9,7 +9,7 @@ html ,body{height: 100%;}
 }
 .head{
     padding-top: 10px;
-    background-color:rgb(33, 37, 41);;
+    background-color:#d0b49f;
     border-bottom: 2px solid black;
     flex-direction: row;
 
@@ -53,7 +53,7 @@ html ,body{height: 100%;}
     display: flex;
     flex-direction: column;
     height: 500px;
-    background-color: #8787FB;
+    background-color: #d0b49f;
     border-bottom: 2px solid black;
     justify-content: center;
     color: white;
@@ -76,14 +76,14 @@ html ,body{height: 100%;}
 
 .info{
     height:48vh;
-    background-color: white;
+    background-color: #f1e7dd;
 }
 .footer{
-    position: fixed;
-    bottom: 0;
     background-color: black;
     height:50px;
-    display: block;
+    width: 100%;
+    position: sticky;
+    bottom: 0;
 }
 
 .about{
@@ -97,7 +97,7 @@ html ,body{height: 100%;}
 
 
 @media (max-width: 750px){
-    #head  h1{
+    .head  h1{
         font-size:32px;
     }
     .undHead{
