--- a/Ecommerce/views/products/index.ejs
+++ b/Ecommerce/views/products/index.ejs
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Products</title>
+    <%- include('../partials/styles') %>
     <link rel="stylesheet" href="StyleP.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
     <%- include('../partials/nav') %> 
     
     <a href="/stores">Go to Stores</a>
+    <%- include('../partials/footes') %>
 </body>
 </html>
