--- a/Ecommerce/views/products/nextPage.ejs
+++ b/Ecommerce/views/products/nextPage.ejs
@@ -52,17 +52,17 @@
         </div>
     </div>
     </section>
-    <div class="pageSwitch">
-        <nav aria-label="Page navigation">
-            <ul class="pagination">
+     <div class="pageSwitch">
+        <nav aria-label="Page navigation" >
+            <ul class="pagination ">
               <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="/search">1</a></li>
+              <li class="page-item"><a class="page-link" href="/search/page2">2</a></li>
+              <li class="page-item"><a class="page-link" href="/search/page3">3</a></li>
               <li class="page-item"><a class="page-link" href="#">Next</a></li>
             </ul>
           </nav>  
-    </div>
+    </div> 
     <%- include('../partials/footes') %> 
 </body>
 </html>
