--- a/Ecommerce/views/users/login.ejs
+++ b/Ecommerce/views/users/login.ejs
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <%- include('../partials/styles') %>
     <link rel="stylesheet" href="/css/register.css">
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    
 </head>
 <body>
     <div class="fullbody">
