--- a/Ecommerce2/views/stores/new.ejs
+++ b/Ecommerce2/views/stores/new.ejs
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Store</title>
     <link rel="stylesheet" href="/css/newS.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <%- include('../partials/styles') %>
 </head>
 <body>
     <div class="background">
